--- a/js/public/index.html
+++ b/js/public/index.html
@@ -7,8 +7,19 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="explore deep sequencing data for SARS-CoV-2"
     />
+    <!-- social -->
+    <meta property="og:title" content="DeepSeqer" />
+    <meta property="og:type" content="website" />
+    
+    <meta property="og:description" content="Explore deep sequencing data for SARS-CoV-2" />
+
+    <meta name="twitter:card" content="summary" />
+
+    <meta name="twitter:description" content="Explore deep sequencing data for SARS-CoV-2" />
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>DeepSeqer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
