--- a/js/public/index.html
+++ b/js/public/index.html
@@ -19,6 +19,15 @@
 
     <meta name="twitter:description" content="Explore deep sequencing data for SARS-CoV-2" />
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-65298-16"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-65298-16');
+</script>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
