--- a/js/public/index.html
+++ b/js/public/index.html
@@ -10,7 +10,7 @@
       content="explore deep sequencing data for SARS-CoV-2"
     />
     <!-- social -->
-    <meta property="og:title" content="DeepSeqer" />
+    <meta property="og:title" content="DeeperSeq" />
     <meta property="og:type" content="website" />
     
     <meta property="og:description" content="Explore deep sequencing data for SARS-CoV-2" />
