--- a/js/public/index.html
+++ b/js/public/index.html
@@ -13,11 +13,11 @@
     <meta property="og:title" content="DeeperSeq" />
     <meta property="og:type" content="website" />
     
-    <meta property="og:description" content="Explore deep sequencing data for SARS-CoV-2" />
+    <meta property="og:description" content="Explore deep sequencing data for viruses" />
 
     <meta name="twitter:card" content="summary" />
 
-    <meta name="twitter:description" content="Explore deep sequencing data for SARS-CoV-2" />
+    <meta name="twitter:description" content="Explore deep sequencing data for viruses" />
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-65298-16"></script>
